@startuml

title __LONG_TERM_CA's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.long_term_ca {
    class pt.ulisboa.tecnico.surespace.long_term_ca.LongTermCAApp {
        {static} + main()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.long_term_ca {
    class pt.ulisboa.tecnico.surespace.long_term_ca.LongTermCAServiceImpl {
        + LongTermCAServiceImpl()
        + ping()
        + registerEntity()
    }
  }
  

  pt.ulisboa.tecnico.surespace.long_term_ca.LongTermCAServiceImpl -up-|> pt.ulisboa.tecnico.surespace.long_term_ca.grpc.LongTermCAServiceGrpc.LongTermCAServiceImplBase
  pt.ulisboa.tecnico.surespace.long_term_ca.LongTermCAServiceImpl o-- pt.ulisboa.tecnico.surespace.long_term_ca.domain.LongTermCA : longTermCA


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
